[project]
name = "server"
version = "0.1.0"
description = ""
authors = [
    {name = "taro-git",email = "t.taro30954694@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.128.0,<0.129.0)",
    "nba-api (>=1.11.3,<2.0.0)",
    "uvicorn (>=0.40.0,<0.41.0)",
    "ruff (>=0.14.14,<0.15.0)",
    "apscheduler (>=3.11.2,<4.0.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "sqlmodel (>=0.0.32,<0.0.33)",
    "psycopg[binary] (>=3.3.2,<4.0.0)",
    "alembic (>=1.18.3,<2.0.0)"
]

[tool.poetry]
packages = [
    {include = "rest_api", from = "src"},
    {include = "batch", from = "src"},
    {include = "common", from = "src"}

]

[tool.ruff]
line-length = 120
lint.select = ["I", "F", "E", "ANN", "RET", "B"]
lint.fixable = ["I"]
lint.ignore = ["ANN101", "ANN102"]

[tool.ruff.lint.per-file-ignores]
"src/rest_api/routes/**/*.py" = ["B008"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
